<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#3772E7"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="14dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp"

        >

    <Button
        android:id="@+id/find"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="#ffffff"
        android:text="@string/main_find"
        app:icon="@drawable/find"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="#1A1B22"
        android:textColor="#1A1B22"
        android:textSize="26sp"
        app:cornerRadius="16dp"
        />
    <Button
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="#ffffff"
        android:text="@string/main_media"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="#1A1B22"
        android:textColor="#1A1B22"
        android:textSize="26sp"
        app:cornerRadius="16dp"
        />
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:backgroundTint="#ffffff"
        android:text="@string/main_settings"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="#1A1B22"
        android:textColor="#1A1B22"
        android:textSize="26sp"
        app:cornerRadius="16dp"
        />
    </LinearLayout>

</LinearLayout>