<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:id="@+id/some_id"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="86dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/main_settings"
            android:textColor="#000000"
            android:textSize="26sp" />


    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_black"
            android:textColor="#000000"
            android:textSize="19sp"
            android:paddingStart="16dp"
            android:paddingEnd="21dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:layout_gravity="start"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_share"
            android:textColor="#000000"
            android:textSize="19sp"
            android:paddingStart="16dp"
            android:paddingEnd="21dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:src="@drawable/share"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_support"
            android:textColor="#000000"
            android:textSize="19sp"
            android:paddingStart="16dp"
            android:paddingEnd="21dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:src="@drawable/support"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_user_agreement"
            android:textColor="#000000"
            android:textSize="19sp"
            android:paddingStart="16dp"
            android:paddingEnd="21dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:layout_gravity="start"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="12dp"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>

</LinearLayout>